fix header gap and border radius on map and reviews area on home page

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 a {
 
 header {
   background-color: #bebebe;
-  margin: -20px 0 0 -10px;
+  margin: -20px 0 0 0px;
   width: 100%;
   height: 120px;
 }
@@ -77,7 +77,7 @@ header {
   background-repeat: no-repeat;
   background-size: 1600px;
   position: relative;
-  margin: -100px 15px 40px -10px;
+  margin: -100px 15px 40px 0px;
 }
 
 .slogan {
@@ -238,7 +238,7 @@ header {
 
 .map {
   width: 48%;
-  border-radius: 6%;
+  border-radius: 6px;
   text-align: left;
   float: left;
   margin: 20px 0 50px 0;
@@ -247,7 +247,7 @@ header {
 .reviews {
   background-color: #bebebe;
   color: white;
-  border-radius: 6%;
+  border-radius: 6px;
   font-family: raleway, sans-serif;
   font-style: italic;
   font-size: 130%;
@@ -500,7 +500,15 @@ input[type="submit"] {
 .photos {
   column-count: 1;
 }
+
+.about-us-area {
+  width: 93%;
+  margin: 10px;
+  padding: 0%;
+  float: none;
 }
+}
+
 
 @media only screen and (max-width: 1200px) and (min-width: 575px) {
   header {
